--- a/第一卷.md
+++ b/第一卷.md
@@ -1,3 +1,16 @@
 # 第一卷
 ***
 原文地址：[Book I](https://en.wikisource.org/wiki/The_Histories_(Paton_translation)/Book_I)
+### 1
+如果有人认为以前的编年史学者大体上忽视了对历史的评价，那么我很欢迎他来读我现在写的东西。以史为鉴可知兴替。师古者，正德养性。
+但是，无一例外地，所有的编年史学者都没有把他们的重心放到这方面，我们知道，积极的政治生活最稳健有效的教育方式就是学习历史，还有，学习如何泰然面对生命里的兴衰荣辱的不二法门就是观前人之法，观而鉴之，是为此道。因此，显然，没有人有义务去继续仅仅只是重复那些古老的东西。我所写出的内容来，足以挑战和激励每个人，不论老少，都要细读我的结构性历史。又有谁不想知道罗马人究竟用了什么样的手法和政治体制在不到五十三年的时间里成功使几乎所有有人居住的地方臣服了她呢？——这难道是不是历史上前无古人的么？又或者还有谁会觉着有什么比这更吸引他而一头栽进去对此等奥妙之事却置若罔闻呢？
+### 2
+如果我们把构成那些编年史学者著作主体的过去的大部分帝国和罗马放在一起度长絜大，很明显，我们要论述的这种图景是多么的宏伟壮丽。这很值得我们对他们进行比较研究。波斯人曾经一度建立了相当广阔的统治，但是当他们试图向亚洲迈进时，不仅他们的帝国出现了危机，甚至他们自身的生死存亡也变得紧迫起来。斯巴达人在经历了极其漫长的对希腊霸权的争夺后终于获得了胜利，但是随后它的霸主地位只保持了区区十二年。马其顿在欧洲的统治范围很大，但是放眼整个大陆，从亚得里亚海到多瑙河，它也只是很小的一部分，后来，它战胜了波斯，也成为了亚洲的霸主。尽管现在看来他们的帝国在地理上政治上都是相当庞大的，但是那些更为广袤的人迹罕至的地方他们也未曾涉足。甚至他们从来就没有对西西里、撒丁和利比亚的占有提出过想法，而西欧那些最好战的民族他们则压根就没听说过。罗马则把他们统统征服了——不是部分的而是全部的——几乎完全统治了这个世界，建立了一个壮丽的帝国，这个帝国不仅远远超过了过去的一切帝国，恐怕将来也难有谁在影响力上望其项背。在研究它如何一步步获得这种力量的同时，我们将会清晰地看到“以史为鉴者”能够取得多么巨大的优势。
+### 3
+我们接下来将要写的历史的开始节点是第140届奥林匹克运动会（_公元前220年至前216年_），包括下述事件：
+1. 希腊人所谓的同盟战争，第一亚该亚联盟和腓力（*五世*）——德米特里乌斯之子，珀尔修斯之父——率领下的马其顿对战埃托利亚联盟。
+2. 父祐者托勒密（*四世*）和安提阿库（*三世*）在亚洲的叙利亚战争。
+3. 罗马和迦太基在意大利、努米迪亚及其毗邻地区进行的战争，即为众熟知的汉尼拔战争。
+
+这些事件以阿拉特斯在希思翁的壮举作为结束的标志。在此之前，世界的历史是分散的，没有共同的事件、地点将不同民族的活动连结起来；自此之后历史就成为了一个有机整体，意大利和利比亚的风吹草动变得和希腊与亚洲息息相关起来，并共同影响历史的走向。此即我们从那个时间节点开始归纳他们结构性历史的原因。
+因为在汉尼拔战争中最终打败了迦太基，罗马人感觉自己已经迈出了它整个宏观布局最关键和最基础的一步，于是它随即鼓起勇气放开步子，向下一步前进，将军队派往了希腊和亚洲。我们希腊人对在世界范围内争强称霸的这两个世界帝国已经很了解了，我想我们也许没必要了解他们以前的历史或者真正理解到底是什么样的目的指引着他们、什么样的力量支持着他们如此醉心于此。但是正是因为大部分希腊人对于罗马和迦太基既不了解他们的力量也不知道他们的历史，我们觉着有必要在书里的历史记录前附前言，避免有人读完之后感觉缺少什么或者发问罗马人究竟抱着什么样的信念靠着什么样的力量才在我们这个世界建立起它从山到海的至高权威的。不过，从这些书的记叙和我们的蓝图中，相信读者可以轻易地发现他们仔细构建世界帝国的充分理由和热心实现之的充分手段。
